# Axcryptor

./: .gitignore  Cargo.toml  README.md
axcryptor/: Cargo.toml  Shuttle.toml
axcryptor/src/: handlers.rs  main.rs
axcryptor/static/: index.html
src/: encryption.rs  handlers.rs  main.rs  models.rs  utils.rs
static/: index.html
static/helper/: app.js  index.css
