[package]
name = "file_encryptor_axum"
version = "0.1.0"
edition = "2021"

[dependencies]
hyper = { version = "1", features = ["full"] }
tower-http = { version = "0.5", features = ["fs"] }
axum = "0.7"
tokio = { version = "1", features = ["full"] }
tower = "0.4"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
mime = "0.3"
axum-extra = { version = "0.9", features = ["multipart"] }
uuid = { version = "1", features = ["v4"] }

