[package]
name = "file_encryptor_axum"
version = "0.1.0"
edition = "2021"

[dependencies]
tower-http = { version = "0.5", features = ["fs"] }
axum = { version = "0.7", features = ["multipart", "ws"] }
tokio = { version = "1", features = ["full"] }
tower = "0.4"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
axum-extra = { version = "0.9", features = ["multipart"] }
uuid = { version = "1", features = ["v4"] }
chacha20poly1305 = "0.10"
aes-gcm = "0.10"
argon2 = "=0.5.3"
base64ct = "=1.6.0"
rand = "0.8"
base64 = "0.21"
anyhow = "1.0"
shuttle-axum = "0.42.0"
shuttle-runtime = "0.42.0"