[package]
name = "axcryptor"
version = "0.1.0"
edition = "2021"
include = ["static/**", "src/**", "Cargo.toml", "Cargo.lock"]


[dependencies]
axum = { version = "0.8", features = ["macros", "multipart"] }
axum-extra = { version = "0.8", features = ["multipart"] }
axum-macros = "0.3"
shuttle-axum = "0.55.0"
shuttle-runtime = "0.55.0"
tokio = "1.28.2"
tower-http = { version = "0.5", features = ["fs","trace"] }
tracing= "0.1"
tower = "0.4"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
uuid = { version = "1", features = ["v4"] }
chacha20poly1305 = "0.10"
aes-gcm = "0.10"
argon2 = "=0.5.3"
base64ct = "=1.6.0"
rand = "0.8"
base64 = "0.21"
anyhow = "1.0"
